# junkcode

./: .gitignore  README  opcmx
PicKing/: .project
assignment/OOAD/: CMakeLists.txt  umleditor.qrc
assignment/OOAD/src/: abstractumlitem.cpp  abstractumlitem.hpp  abstractumlitemprivate.hpp  abstractumllink.cpp  abstractumllink.hpp  abstractumllinkprivate.hpp  associationumllink.cpp  associationumllink.hpp  classumlitem.cpp  classumlitem.hpp  compositionumllink.cpp  compositionumllink.hpp  generalizationumllink.cpp  generalizationumllink.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindowprivate.hpp  port.cpp  port.hpp  portprivate.hpp  umlitemgroup.cpp  umlitemgroup.hpp  umlscene.cpp  umlscene.hpp  umlsceneprivate.hpp  usecaseumlitem.cpp  usecaseumlitem.hpp
assignment/Security/p1/: CMakeLists.txt
assignment/Security/p1/src/: client.c  config.h  network_win32.c  network_win32.h  server.c  tcpserver.h  tcpserver_linux.c  tcpserver_win32.c  tcpsocket.h  tcpsocket_linux.c  tcpsocket_linux.h  tcpsocket_win32.c  tcpsocket_win32.h  utility.h  utility_linux.c  utility_win32.c  utility_x64_linux.c  utility_x64_win64.c  utility_x86.c
blog/: TODO  (+2 more)
drive/: Makefile  faststart.sh  hah.sh  jav.sh  lfs.sh  listeh.sh  normalize.sh  normalize_unicode_name.sh  pyproject.toml  uniname.sh
drive/app/: jav.py  lib.py  normalize.py
drive/app/benchmark/: _lib.py
drive/app/faststart/: __main__.py  _args.py  _cache.py  _main.py  _processor.py  cache.py  main.py  processor.py
drive/app/hah/: __main__.py  _archive.py  _arg.py  _check.py  _download.py  _main.py  _upload.py
drive/app/jav/: __main__.py  _dispatch.py  _main.py  _sauce.py  _types.py
drive/app/lfs/: _analyzer.py  _generator.py  _main.py  _types.py
drive/app/unstable/: listeh.py  uniname.py
drive/legacy/faststart/app/: __main__.py  main.py  processor.py
drive/legacy/migration/: docker-compose.yml
drive/legacy/migration/app/: migrate.py  progress.py  speed.py
drive/legacy/shell/: fix-media  fix-unicode  sort.py
driveutil/fix-hah/: pyproject.toml  run.sh
driveutil/fix-hah/app/: _arg.py  _download.py  _main.py  _upload.py
sandbox/c++/browser/: CMakeLists.txt  browser.pro  controller.cpp  controller.h  database.cpp  database.h  eventqueue.cpp  eventqueue.h  inner.js  login.js  macrobot.cpp  macrobot.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouse.cpp  mouse.h  networkaccessmanagerproxy.cpp  networkaccessmanagerproxy.h  networkreplyproxy.cpp  outer.js  resource.qrc  robot.cpp  robot.h  task.cpp  task.h  task_p.h
sandbox/c++/browser/osx/: macrobot.cpp  macrobot.h
sandbox/c++/browser/src/: apiclient.cpp  apiclient.h  controller.cpp  controller.h  database.cpp  database.h  eventqueue.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  missionqueue.cpp  missionqueue.h  mouse.cpp  networkaccessmanagerproxy.cpp  networkaccessmanagerproxy.h  networkreplyproxy.h  nyukyoqueue.h  robot.cpp  robot.h  task.h  webpage.cpp
sandbox/c++/browser/win/: winrobot.cpp  winrobot.h
sandbox/c++/coroutine/: CMakeLists.txt
sandbox/c++/coroutine/examples/: httpserver.cpp  main.cpp
sandbox/c++/coroutine/include/: qtcoroutine.hpp
sandbox/c++/coroutine/src/: main.cpp  qtcoroutine.cpp  qtcoroutine_p.hpp  task.cpp  task.hpp  task_p.hpp
sandbox/c++/fbv/: CMakeLists.txt
sandbox/c++/fbv/src/: conductor.cpp  conductor.hpp  exception.hpp  filecontroller.cpp  filecontroller_p.hpp  keyboardhandler.cpp  keyboardhandler.hpp  main.cpp
sandbox/c++/json/: CMakeLists.txt
sandbox/c++/json/include/: json.hpp
sandbox/c++/json/src/: json.cpp  main.cpp
sandbox/c++/kdesrc-curses/: CMakeLists.txt
sandbox/c++/kdesrc-curses/src/: main.cpp  napplication.cpp  napplication.hpp  napplication_p.hpp  npoint.cpp  npoint.hpp  npoint_p.hpp  nsize.cpp  nsize.hpp  nsize_p.hpp  nwidget.cpp  nwidget.hpp  nwidget_p.hpp
sandbox/c++/qbtd/: CMakeLists.txt
sandbox/c++/qbtd/src/: controlserver.cpp  controlserver.hpp  controlserver_p.hpp  controlsession.cpp  controlsession.hpp  controlsession_p.hpp  inspector.cpp  inspector.hpp  main.cpp  torrentsession.cpp  torrentsession.hpp  torrentsession_p.hpp
sandbox/cplusplus/asiocrt/: CMakeLists.txt
sandbox/cplusplus/asiocrt/src/: coroutine.cpp  coroutine.hpp  main.cpp
sandbox/cplusplus/driveclient/: CMakeLists.txt
sandbox/cplusplus/driveclient/src/: drivefileinfo.cpp  drivefileinfo.h  drivefileinfo_p.h  drivemodel.cpp  drivemodel.h  drivemodel_p.h  drivenode.cpp  drivenode.h  drivesystem.cpp  drivesystem.h  drivesystem_p.h  fileinfogatherer.cpp  fileinfogatherer_p.h  filesystemmodel.cpp  filesystemmodel.h  filesystemmodel_p.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_p.h
sandbox/cplusplus/fbv/: CMakeLists.txt
sandbox/cplusplus/fbv/src/: exception.cpp  filecontroller.hpp
sandbox/cplusplus/kdesrc-curses/: CMakeLists.txt
sandbox/cplusplus/kdesrc-curses/src/: main.cpp
sandbox/cplusplus/logging/: CMakeLists.txt
sandbox/cplusplus/logging/src/: main.cpp
sandbox/cplusplus/pycpp/: CMakeLists.txt  Derived.cpp  Derived.hpp  Makefile  pycpp.cpp  test.py
sandbox/cplusplus/qtfs/: CMakeLists.txt
sandbox/cplusplus/qtfs/src/: main.cpp
sandbox/cplusplus/regex_test/: CMakeLists.txt  test.py
sandbox/cplusplus/regex_test/src/: c.c  c.h  cplusplus.cpp  python.c
sandbox/cplusplus/socks5_proxy/: CMakeLists.txt
sandbox/cplusplus/socks5_proxy/src/: global.cpp  global.hpp  global_p.hpp  main.cpp  server.cpp  server.hpp  server_p.hpp  session.cpp  session.hpp  session_p.hpp
sandbox/cplusplus/unpack/: CMakeLists.txt  unpack.cpp  unpack.h
sandbox/cplusplus/unpack/src/: exception.cpp  exception.hpp  main.cpp  types.hpp  unpack.cpp  unpack.hpp
sandbox/python/poc/: SPEC.md  pyproject.toml
sandbox/python/screenshot/ext/: CMakeLists.txt  frame.c  frame.h  input.c  input.h  output.c  output.h  screenshot.c  screenshot.h  types.h
sandbox/python/wcpan.drive.synology/: .gitignore  01-requirement.md  02-sync-analysis.md  03-performance-analysis.md  README.md  pyproject.toml
sandbox/rust/libqt5/: CMakeLists.txt
talk/demo/04_big_integer/: CMakeLists.txt  README
(+1351 files in other folders)
