[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Wei-Cheng Pan <legnaleurc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wcpan-drive-sqlite = "^2.1.0"
wcpan-drive-google = "^9.1.6"
wcpan-drive-crypt = "^4.1.1"
wcpan-drive-cli = "^3.3.1"
wcpan-logging = "^2.0.3"
beautifulsoup4 = "^4.12.2"
python-magic = "^0.4.27"
wcpan-jav = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
