[project]
name = "wcpan-drive-synology"
version = "1.0.0"
description = "Synology Drive Web API integration for wcpan.drive"
authors = [
    { name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "wcpan-drive-core>=4.1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "ASYNC", "B", "A", "C4", "RET", "SIM", "PTH"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
